--- a/DockerFile
+++ b/DockerFile
@@ -1,16 +1,22 @@
+# Use the Maven image to build the application
 FROM maven:3-openjdk-22 AS build
 WORKDIR /app
 
+# Copy the project files to the Docker container
 COPY . .
+
+# Package the application
 RUN mvn clean package -DskipTests
 
-
-# Run stage
-
+# Use a minimal image for running the application
 FROM openjdk:22-jdk-slim
 WORKDIR /app
 
-COPY --from=build /app/target/DrComputer-0.0.1-SNAPSHOT.war drcomputer.war
-EXPOSE 8081 
+# Copy the packaged application to the run stage
+COPY --from=build /app/target/KiraJewelry-0.0.1-SNAPSHOT.jar kirajewelry.jar
 
-ENTRYPOINT ["java","-jar","drcomputer.war"]
+# Expose the application port
+EXPOSE 8080
+
+# Run the application
+ENTRYPOINT ["java","-jar","kirajewelry.jar"]
