--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,42 +1,17 @@
-# # Application name and server port
-# spring.application.name=KiraJewelry
-# server.port=8081
-
-# # Database connection settings
-# spring.datasource.url = jdbc:sqlserver://localhost:1433;databasename=JewelryStore;encrypt=true;trustServerCertificate=true;
-# spring.datasource.username = sa
-# spring.datasource.password = 12345
-
-# # JPA settings
-# spring.jpa.hibernate.ddl-auto=none
-# spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServerDialect
-# spring.jpa.database = sql-server
-
-# # Thymeleaf settings
-# spring.thymeleaf.prefix=classpath:/templates/
-# spring.thymeleaf.suffix=.html
-# spring.thymeleaf.mode=HTML
-# spring.thymeleaf.cache=false
-
-# # Logging settings
-# logging.level.org.springframework=DEBUG
-# logging.level.com.jewelry.KiraJewelry=DEBUG
-# logging.level.org.hibernate.SQL=DEBUG
-# logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # Application name and server port
 spring.application.name=KiraJewelry
 server.port=8080
 
-# Database connection settings
-spring.datasource.url=jdbc:postgresql://viaduct.proxy.rlwy.net:37420/railway
-spring.datasource.username=postgres
-spring.datasource.password=kBYIFnoESeiNGOwLgRplomkgbfVnUQyF
-spring.datasource.driver-class-name=org.postgresql.Driver
+# Database connection settings for MySQL
+spring.datasource.url=jdbc:mysql://viaduct.proxy.rlwy.net:51666/railway
+spring.datasource.username=root
+spring.datasource.password=rbHnlgtjWycTWFyXiFVRYOfMQHZBjdkW
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA settings
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.database=postgresql
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.database=mysql
 
 # Thymeleaf settings
 spring.thymeleaf.prefix=classpath:/templates/
