--- a/DockerFile
+++ b/DockerFile
@@ -1,22 +1,15 @@
-# Use the Maven image to build the application
+# Build stage
 FROM maven:3-openjdk-22 AS build
 WORKDIR /app
 
-# Copy the project files to the Docker container
 COPY . .
-
-# Package the application
 RUN mvn clean package -DskipTests
 
-# Use a minimal image for running the application
+# Run stage
 FROM openjdk:22-jdk-slim
 WORKDIR /app
 
-# Copy the packaged application to the run stage
 COPY --from=build /app/target/KiraJewelry-0.0.1-SNAPSHOT.jar kirajewelry.jar
-
-# Expose the application port
 EXPOSE 8080
 
-# Run the application
 ENTRYPOINT ["java","-jar","kirajewelry.jar"]
