--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,15 +3,15 @@ spring.application.name=KiraJewelry
 server.port=8080
 
 # Database connection settings for MySQL
-spring.datasource.url=jdbc:mysql://viaduct.proxy.rlwy.net:51666/railway
+spring.datasource.url=jdbc:mysql://viaduct.proxy.rlwy.net:51666/railway?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=rbHnlgtjWycTWFyXiFVRYOfMQHZBjdkW
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA settings
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.database=mysql
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 # Thymeleaf settings
 spring.thymeleaf.prefix=classpath:/templates/
